RESOLVED FIXED151148
Assignment to new.target should be an early error
https://bugs.webkit.org/show_bug.cgi?id=151148
Summary Assignment to new.target should be an early error
Attachments
patch (8.49 KB, patch)
2016-03-09 23:48 PST, Saam Barati
mark.lam: review+
patch for landing (9.18 KB, patch)
2016-03-10 00:08 PST, Saam Barati
no flags
Saam Barati
Comment 1 2016-03-09 23:48:53 PST
WebKit Commit Bot
Comment 2 2016-03-09 23:51:12 PST
Attachment 273545 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/parser/Parser.cpp:3043: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/parser/Parser.cpp:4012: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/parser/Parser.cpp:4024: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/parser/Parser.cpp:4038: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 4 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3 2016-03-10 00:06:34 PST
Comment on attachment 273545 [details] patch r=me
Saam Barati
Comment 4 2016-03-10 00:08:52 PST
Created attachment 273546 [details] patch for landing thanks for the review. Here is an updated patch that I will land later. It updates the stress/new-target.js file because that test no longer parses!
Saam Barati
Comment 5 2016-03-10 11:42:48 PST
Note You need to log in before you can comment on or make changes to this bug.